2009-09-11  Eric Seidel  <eric@webkit.org>

        No review, rolling out r48229.
        http://trac.webkit.org/changeset/48229

        * WebCore.base.exp:
        * dom/Clipboard.cpp:
        (WebCore::Clipboard::Clipboard):
        (WebCore::Clipboard::sourceOperation):
        * page/DragController.cpp:
        (WebCore::DragController::DragController):
        (WebCore::DragController::dragExited):
        (WebCore::DragController::performDrag):
        (WebCore::DragController::dragEnteredOrUpdated):
        (WebCore::DragController::tryDHTMLDrag):
        (WebCore::DragController::startDrag):
        * page/DragController.h:
        * page/EventHandler.cpp:
        (WebCore::EventHandler::updateDragAndDrop):
        (WebCore::EventHandler::dragSourceMovedTo):
        (WebCore::EventHandler::handleDrag):
        * page/EventHandler.h:

2009-09-11  Michelangelo De Simone  <micdesim@gmail.com>

        Fix the build.

        * html/ValidityState.cpp:
        (WebCore::ValidityState::typeMismatch):

2009-09-11  Michelangelo De Simone  <micdesim@gmail.com>

        Reviewed by Antti Koivisto.

        https://bugs.webkit.org/show_bug.cgi?id=27456
        Added support for static validation of url in
        ValidityState, for url state inputs.
        From HTML5 specs:
        http://www.whatwg.org/specs/web-apps/current-work/#url-state

        Test: fast/forms/ValidityState-typeMismatch-url.html

        * html/ValidityState.cpp:
        (WebCore::ValidityState::typeMismatch):

2009-09-11  Evan Stade  <estade@chromium.org>

        Reviewed by Darin Adler.

        Revert r47992: Expose functions to change the focus ring color for
        Linux Chromium.

        As Darin Fisher has pointed out, there is a better way to do this.

        * rendering/RenderThemeChromiumLinux.cpp:
        (WebCore::RenderThemeChromiumLinux::RenderThemeChromiumLinux):
        * rendering/RenderThemeChromiumLinux.h:

2009-09-11  Alexey Proskuryakov  <ap@webkit.org>
